package edu.austral.ingsis.math;

public interface BinaryOperation extends Symbol {
  Symbol getFirst();

  Symbol getSecond();
}
